--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 
 <html>
-    <head>
-        <script src="hw8.js"></script>
-    </head>
-    <body>
-         <h1>Page loaded</h1>
-    </body>
+
+<head>
+    <script src="http://underscorejs.org/underscore.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="app.js"></script>
+</head>
+
+<body>
+    <h1>Page loaded</h1>
+</body>
+
 </html>
